<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbSewaMobl"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tbSewaMobl"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:paddingBottom="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/idSewa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Identitas Penyewa"
                        android:textColor="@color/colorPrimary"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/idSewa"
                        android:layout_marginTop="20dp"
                        android:text="@string/nama_penyewa"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/eTNama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtName"
                        android:hint="Masukkan Nama (Max 15 karakter)"
                        android:inputType="text"
                        android:maxLength="20"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtAlamat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/eTNama"
                        android:layout_marginTop="10dp"
                        android:text="@string/alamat"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/eTAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtAlamat"
                        android:hint="Masukkan Alamat Anda"
                        android:inputType="text"
                        android:maxLength="20"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtTlp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/eTAlamat"
                        android:layout_marginTop="10dp"
                        android:text="@string/no_telp_hp"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/eTHP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtTlp"
                        android:hint="Masukkan No. Telp/HP"
                        android:inputType="number"
                        android:maxLength="20"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtseekBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/eTHP"
                        android:layout_marginTop="10dp"
                        android:text="Skill Futsal Kamu : "
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/skillkamu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/eTHP"
                        android:layout_marginTop="10dp"
                        android:text="0"
                        android:layout_toRightOf="@+id/txtseekBar"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <SeekBar
                        android:id="@+id/seekBar"
                        style="@style/Widget.AppCompat.SeekBar"
                        android:layout_below="@+id/txtseekBar"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="10"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/txtCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/seekBar"
                        android:layout_marginTop="15dp"
                        android:text="Kaki Terkuat"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <CheckBox
                        android:id="@+id/check1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtCheckbox"
                        android:text="Kaki KANAN (RIGHT)" />

                    <CheckBox
                        android:id="@+id/check2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/check1"
                        android:text="Kaki KIRI (LEFT)" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/idDtMbl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Data Lapangan"
                        android:textColor="@color/colorPrimary"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtMerk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/idDtMbl"
                        android:layout_marginTop="15dp"
                        android:text="@string/merk_lapangan"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/txtMerk" />

                    <TextView
                        android:id="@+id/txtPromo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/spinner"
                        android:layout_marginTop="20dp"
                        android:text="Promo"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <RadioGroup
                        android:id="@+id/promoGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtPromo"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbWeekDay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="Weekday (10%)"
                            android:textColor="@color/colorPrimary" />

                        <RadioButton
                            android:id="@+id/rbWeekEnd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="Weekend (25%)"
                            android:textColor="@color/colorPrimary" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/txtLmSewa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/promoGroup"
                        android:layout_marginTop="20dp"
                        android:text="@string/lama_sewa"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/eTLamaSewa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtLmSewa"
                        android:hint="Masukkan Lamanya Durasi Sewa"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textSize="16sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/selesaiHitung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="8dp"
                android:text="Submit"
                app:cornerRadius="50dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:backgroundTint="@color/colorPrimary" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>